# mixar-uv-unwrap-assignment

./: DESIGN_DECISIONS.md  README.md
starter_code/part1_cpp/: ALGORITHM.md  CMakeLists.txt  TEST_RESULTS.txt
starter_code/part1_cpp/src/: lscm.cpp  packing.cpp  seam_detection.cpp  topology.cpp  unwrap.cpp
starter_code/part2_python/: README.md  cli.py  report.json
starter_code/part2_python/uvwrap/: bindings.py  metrics.py  optimizer.py  processor.py
starter_code/part3_blender/: README.md  demo.blend
starter_code/part3_blender/autouv/: __init__.py  cache.py  live_preview.py  operator.py  panel.py  seam_tools.py  wrapper.py
